<resources>
    <string name="app_name">XFolder</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="permission_fail_tips">未授予存储权限，应用将无法正常工作。</string>
    <string name="photo_folder_page_title">相册</string>
    <string name="photo_list_default_page_title">所有图片</string>
    <string name="folder_info">%1$d个文件夹 , %2$d个文件</string>
    <string name="video_item_info">大小:%1$s , 时长:%2$s</string>
    <string name="audio_item_info">大小:%1$s , 时长:%2$s</string>
    <string name="photo_folder_info">%1$s(%2$d)</string>
    <string name="search_result_info">提示：共检索到相关结果%1$d个。</string>
    <string name="search_time_info">耗时%1$d毫秒</string>
    <string name="search_result_null">您要找的文件可能在火星</string>
    <string name="file_not_exist">~文件不翼而飞~</string>


    <string name="explorer_menu_item_title_name_asc">按名称升序(a-z)</string>
    <string name="explorer_menu_item_title_name_desc">按名称升序(z-a)</string>
    <string name="explorer_menu_item_title_date_asc">按时间升序</string>
    <string name="explorer_menu_item_title_date_desc">按时间降序</string>
    <string name="explorer_menu_item_title_dir_first">目录优先</string>
    <string name="explorer_menu_item_title_file_first">文件优先</string>

</resources>
